# xlink

./: .gitignore  Cargo.toml  Cargo.toml.test  README.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  coverage.yml  release.yml  tag-deleted.yml
benches/: performance.rs
docs/: API_REFERENCE.md  CONTRIBUTING.md  FAQ.md  USER_GUIDE.md  errata.md  user_guide.md
examples/: background_discovery.rs  channel_switching.rs  device_migration.rs  group_chat.rs  simple_chat.rs
src/: ffi.rs  lib.rs
src/capability/: detector.rs  manager.rs  mod.rs
src/channels/: base.rs  bluetooth.rs  dummy.rs  lan.rs  memory.rs  mesh.rs  mod.rs  remote.rs  wifi.rs
src/core/: error.rs  metrics.rs  mod.rs  traits.rs  types.rs
src/crypto/: engine.rs  mod.rs  treekem.rs
src/discovery/: manager.rs  manager_test.rs  mod.rs
src/group/: broadcast.rs  manager.rs  mod.rs
tests/: capability_tests.rs  crypto_tests.rs  dos_protection_tests.rs  end_to_end_user_scenarios_tests.rs  group_tests.rs  heartbeat_tests.rs  integration_bluetooth_tests.rs  integration_channel_switching_tests.rs  integration_channels.rs  integration_group.rs  integration_group_communication_tests.rs  integration_remote_tests.rs  integration_server_failover_tests.rs  integration_system.rs  integration_wifi_direct_tests.rs  large_file_transmission_tests.rs  large_group_performance_tests.rs  long_running_tests.rs  router_tests.rs  storage_management_tests.rs  test_arc_dashmap.rs  test_bluetooth.rs  test_lan.rs  test_memory_storage_cleanup.rs  test_mesh.rs  test_rate_limiter_leak.rs  test_wifi.rs  unit_core.rs
(+29 files in other folders)
