[package]
name = "xpush"
version = "0.1.0"
edition = "2021"
authors = ["SDK Team"]
description = "Unified Multi-Channel Push SDK"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4", "serde"] }
rand = "0.8"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
hkdf = "0.12"
dashmap = "5.5"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
futures = "0.3"
# btleplug = "0.11"        # 真实蓝牙操作 - disabled for testing
mdns-sd = "0.10"         # mDNS 服务发现
local-ip-address = "0.5" # 本地 IP 获取
pnet_datalink = "0.34"   # 网络接口检测
flate2 = "1.0"           # 压缩算法
sysinfo = "0.29"         # 系统状态监控
tokio-stream = "0.1"     # 流适配器
hex = "0.4"              # 十六进制编码
reqwest = { version = "0.11", features = ["json"] } # HTTP客户端

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "performance"
harness = false

[features]
test_no_external_deps = []